# netbox_-endpoint_locator

./: README.md  README_CN.md  pyproject.toml
docs/plans/: 2026-04-02-edge-localization-design.md  2026-04-02-librenms-correlation-design.md  2026-04-15-uplink-filter-design.md
netbox_endpoint_locator/: __init__.py  forms.py  librenms.py  navigation.py  plugin.py  topology.py  urls.py  views.py
netbox_endpoint_locator/api/: __init__.py
netbox_endpoint_locator/templates/netbox_endpoint_locator/: lookup.html
tests/: test_librenms_selection.py  test_views_arp_fallback.py
