[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-endpoint-locator"
version = "0.4.1"
description = "NetBox plugin to locate endpoint switch/port via LibreNMS APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
netbox_endpoint_locator = ["templates/**/*.html"]

[tool.setuptools.packages.find]
include = ["netbox_endpoint_locator*"]
